--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,6 +69,9 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:32.2.3') // Use latest BOM
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
 android {
     defaultConfig {
