--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^18.0.1
+  google_fonts: ^4.0.4
   image_picker: ^1.0.8
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
