--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   google_fonts: ^4.0.4
   image_picker: ^1.0.8
+  intl: ^0.19.0
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
   provider: ^6.1.2
+  shared_preferences: ^2.2.3
   supabase_flutter: ^0.2.11
 
 dev_dependencies:
